<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/account_and_security"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/connected_accounts"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/notifications"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/privacy"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/faq"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/rate_us"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/verified_user_criteria"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/block_list"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/general"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/clear_cache"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_update"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:layout_marginBottom="100dp"
               android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>