<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.e.cmlive.viewModel.LoginPhoneViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".activities.LoginPhoneActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/phone_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/sign_up_sign_in"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/please_enter_your_phone_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.hbb20.CountryCodePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:text="@={viewModel.phone}"
                    android:maxLength="10"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_number_is_completely_safe_with_us"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_pink_oval_button"
                android:layout_marginTop="50dp"
                android:text="@string/next"
                android:onClick="@{viewModel::nextClick}"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_blue_oval_button"
                android:drawableStart="@drawable/ic_google"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:onClick="@{viewModel::onGoogleLoginClick}"
                android:text="@string/google_login"
                android:textColor="@color/white" />

        </LinearLayout>


    </RelativeLayout>

</layout>