<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.e.cmlive.viewModel.LoginPasswordViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context="com.e.cmlive.activities.LoginPasswordActivity">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:onClick="@{viewModel::backClick}"
            android:padding="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/back"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password_image"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone number +91 9582297249 has been already registered please sign enter password"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="10dp"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"/>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_pink_oval_button"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:onClick="@{viewModel::loginClick}"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_pink_oval_stroke"
                android:layout_marginTop="30dp"
                android:text="@string/code_login"
                android:onClick="@{viewModel::codeLoginClick}"
                android:textColor="@color/theme_color_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="center"
                android:padding="20dp"
                android:onClick="@{viewModel::forgotPasswordClick}"
                android:layout_marginTop="20dp"
                android:textColor="@color/theme_color_1"/>

        </LinearLayout>

    </RelativeLayout>

</layout>